// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders default checked 1`] = `
<label
  className="ant-checkbox-wrapper ant-checkbox-wrapper-checked"
>
  <span
    className="ant-checkbox ant-checkbox-checked"
    style={Object {}}
  >
    <input
      checked={true}
      className="ant-checkbox-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
    />
    <span
      className="ant-checkbox-inner"
    />
  </span>
  <span>
    test
  </span>
</label>
`;

exports[`renders defult 1`] = `
<label
  className="ant-checkbox-wrapper"
>
  <span
    className="ant-checkbox"
    style={Object {}}
  >
    <input
      checked={false}
      className="ant-checkbox-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
    />
    <span
      className="ant-checkbox-inner"
    />
  </span>
  <span>
    test
  </span>
</label>
`;

exports[`renders disabled 1`] = `
<label
  className="ant-checkbox-wrapper ant-checkbox-wrapper-disabled"
>
  <span
    className="ant-checkbox ant-checkbox-disabled"
    style={Object {}}
  >
    <input
      checked={false}
      className="ant-checkbox-input"
      disabled={true}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
    />
    <span
      className="ant-checkbox-inner"
    />
  </span>
  <span>
    disabled
  </span>
</label>
`;

exports[`renders indeterminate 1`] = `
<label
  className="ant-checkbox-wrapper"
>
  <span
    className="ant-checkbox ant-checkbox-indeterminate"
    style={Object {}}
  >
    <input
      checked={false}
      className="ant-checkbox-input"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      type="checkbox"
    />
    <span
      className="ant-checkbox-inner"
    />
  </span>
  <span>
    indeterminate
  </span>
</label>
`;
